1- Splash ekranı Main Form içerisine alındı...

--- a/MaSoft.MaPos.Windows/UserControls/mainTileControl.resx
+++ b/MaSoft.MaPos.Windows/UserControls/mainTileControl.resx
@@ -1649,7 +1649,7 @@
         ug9O0H4iWoBC0CHlI8WeUA9LPUaK3f4/1cOgthICFgIAAAAASUVORK5CYII=
 </value>
   </data>
-  <data name="tileItemFrame1.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="tileItemFrame3.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAPgAAAB4CAIAAABQA6iEAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
         vAAADrwBlbxySQAA/7JJREFUeF50vQVcHcnW7k1viE1kYpNMjAARQhLcCQRCILi7u7u7u7u7u7sFQrC4
@@ -2806,7 +2806,7 @@
         ug9O0H4iWoBC0CHlI8WeUA9LPUaK3f4/1cOgthICFgIAAAAASUVORK5CYII=
 </value>
   </data>
-  <data name="tileItemFrame2.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="tileItemFrame4.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAPgAAAB4CAMAAADov8/hAAAABGdBTUEAALGPC/xhBQAAAexQTFRFAIKZ
         ////8Pj6wOPowOTp0Oru4PL0gMbRQKq5AI+kAJCkAI2iQK69YLzIgMjSAI6jAJKmAJOnwOXq0OvvEJqt
@@ -2842,6 +2842,34 @@
         JY+p+7Zb4HKpHiq4tJ877KrZLeqODam71X3g6s4AdIcF/q/+NIM0XF5KQTX03+Bqh0A3Jfh8BJpvZ4vL
         0E0JfqP+US3DGc5wCN0MhxjOcIZDDGc4wxkOMZzhDJcxnOEMZ7iM4QxnOMRwhjMcYjjDGQ6hm+EQwxnO
         cIjhDGc4wyGGM5zhMg8cu7H++8719X8Au72RAEg4fQAAAAAASUVORK5CYII=
+</value>
+  </data>
+  <data name="resource.Image9" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAFAAAABQCAYAAACOEfKtAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
+        wQAADsEBuJFr7QAABRVJREFUeF7t3G3oXnMcx/HRTJqyzV2kPNBkUe5GpNTKIxShRJE8kZLhwca2eOCR
+        1Fq5GWE0PEFuWh6ScpNhZHMzQxLyYGJucs/f+2O7dLnO51znd66z3znnd/1/33q1+nSu63/Od+c6t79z
+        5szMzGQN2DALZ8MsnA2zcDbMwtlwjwNwLjbgNbyJLXi7Qy/hXlyMQ+Dmu1U2xGFYj7/Q13oR52NfuGVo
+        hQvn43GkUD9jOebBLUt0LrwMKdXvuBZuWaJz4fNIrXbiLLjlicqFXyBm/QH9jS/xPX7EDxU03U8YV/dD
+        Oz63TNG48DvELO2YtuJ6nIzTcWaAM3A53oGrz3Ec3DJF48JvEbu03dIaqCa6eRhnMT6Bq/PgPhONC9to
+        4KB+xQ3YB25eyqyDq2vgpo/GhW02UPURToSblzIr4UqHNG76aFzYdgNVdX/KN8PVrG3gXahzRpEbOFIP
+        oc7ZRG7gSD2I3MAG9QDaaKA2EwtGskZcOK0NvBAv40PoYsmxcNPV4sJpbOA5GD1FfQ+nwk0fzIUpNHA1
+        XN0IN/2dcLUNOp10nwniwhQaqMtXrq6Cm/4elJXWxKVwn6vkwhQauARfYbh0RqPzZDf93RhXWhMn+jm7
+        MIUGirZrm/AWnsHZcNNJVQNVauJpcJ8v5cJUGigHQWvdgUOZE9JAlfbQp8B9h+XClBoYKrSBqvcRvE10
+        4WxvoEprYlATXZgbuLs+QGUTXTiNDSy7AFtVWhPH7lhc2PcGHgEdxtSxEZPW2INtF/a5gRfhVehOne7S
+        VdEdP/2rezBN6l3YJhYC9LWBuuw/evDcZr2AwnwVAvS1gSvwN7qq31CYr0KAvjbwOjT9KTapXSjMVyFA
+        Xxt4FN5AV6VhfoX5KgTo807keOiY7hVozGIVTSdfo0k9CTsesRCgzw0UXZbXGJgQ+s79cR8mredwMNy8
+        JNnASei26ST1LA6F+85/uXAaGzjJqZyatwju+/7jwtzA3c3TMGf3Xf/jwtneQF2cDR7A7sKUGngCLkHV
+        uMDQBmqHcTjcd1guTKGBGg53Ez6F5lfjBTW0rWyYXEgDn0LQz3aYC1NooMZDa2zhcGkYsEa7uumrGqg1
+        r3bzxIUpNFD3f12VDbDUwzllpTVv4od2XJhCA2+BK412ddPfBlfaYZQeJIdwYQoNrDu0Q6eAOqUblC5K
+        PIFGzRMXTmMDRXvqtdB5rTYBVbdCg7hwWhsYhQtzA2twYW5gDS7MDazBhbmBNbgwN7AGF+YG1uDCFBqY
+        H/UaqboN1D1iV7mBgR6Dq6vhpo/GhV00UDd93Lw4uoCqm9yjpVELy+A+E40Lu2ig3kmzBrrKsspQrkcb
+        HsU3cKX3yhwNt0zRuLCLBuo1ALpCUmVc6ZJV6++QcWEXDWxar6PsEYeoXJhaA3VfpPVt34ALdyCV0raz
+        s+aJC3VI0efSiFPtMO7AMXDL0BoX6v0sGhrbZulpo1sx2Ns62kvrnscF6GR757hQ91b1Eog/0VbptqOb
+        l96zIebiUmhwdRulzcZ+cPPSazYcokcK9KT3w/gYsd4nqPde6T/NzUOv2dDQ2qE79zqNegR6+vsX7K26
+        He7v9p4NA2jcnF4EpncP6LBHz21MWhr9rrXc/Z3es2FNR0LN1HnqdtTdgz+NhXDf3Xs2bECHF1dAP3O9
+        sFZr17jajJPgvisJNtxLdJB7JbSD0Dv/9OLFQX0G7Xn1HJv7bDJsmIWzYRbOhlk4G2ahZub8A6ZzinQ4
+        0WwzAAAAAElFTkSuQmCC
 </value>
   </data>
 </root>
